[package]
name = "gid"
version = "0.1.0"
edition = "2021"
default-run = "gid"

[[bin]]
name = "gid"
path = "src/gid.rs"

[[bin]]
name = "gidc"
path = "src/gidc.rs"

[dependencies]
toml = "0.5"
toml_edit = "0.15"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0.23", features = ["derive"] }
