[package]
name = "gid"
description = "git identity manager"
license = "UPL-1.0"
authors = ["sushigiri"]
version = "0.3.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/sushigiri/gid"
default-run = "gid"

[[bin]]
name = "gid"
path = "src/gid.rs"

[[bin]]
name = "gidc"
path = "src/gidc.rs"

[dependencies]
toml = "0.5"
toml_edit = "0.15"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0.23", features = ["derive"] }
