[package]
name = "gid"
description = "git identity manager"
license = "UPL-1.0"
authors = ["mochalins"]
version = "0.3.1"
edition = "2024"
readme = "README.md"
repository = "https://github.com/mochalins/gid"
default-run = "gid"

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

[[bin]]
name = "gid"
path = "src/gid.rs"

[[bin]]
name = "gidc"
path = "src/gidc.rs"

[dependencies]
toml = "0.8"
toml_edit = "0.22"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
